--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-	<title>Yarqin Mirzad</title>
+	<meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Yarqin Mirzad</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
 	<link rel="stylesheet" href="style/style.css">
 	<link rel="stylesheet" href="assets/FontAwesome.Pro.6.4.2/css/all.css" />
 </head>
