new Styles applied

--- a/index.html
+++ b/index.html
@@ -11,18 +11,21 @@
 
 <body style="height: 2000px;">
 
+	<div class="languages">
+		<a href="">English</a>
+		<a href="">دری</a>
+	</div>
 	<nav class="nav">
 		<img src="assets/images/logo.png" alt="" class="logo">
 		<i class="fa-light fa-bars fa-2x navOpenBtn "></i>
 		<ul class="nav-items">
 			<div class="nav-links" id="backdrop">
-
-				<li><a href="#">خانه</a></li>
-				<li><a href="#">درباره ما</a></li>
-				<li><a href="#">خدمات</a></li>
-				<li><a href="#">پلان ها</a></li>
-				<li><a href="#">نماینده گی ها</a></li>
 				<li><a href="#">تماس با ما</a></li>
+				<li><a href="#">نماینده گی ها</a></li>
+				<li><a href="#">پلان ها</a></li>
+				<li><a href="#">خدمات</a></li>
+				<li><a href="#">درباره ما</a></li>
+				<li><a href="#">صفحه اصلی</a></li>
 
 			</div>
 		</ul>
@@ -128,7 +131,7 @@
 
 
 	<script src="script/jsfile.js"></script>
-	<script src="./script/script.js"></script>
+	<script src="./script/script.js" defer></script>
 </body>
 
 </html>
