new style applied

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="assets/FontAwesome.Pro.6.4.2/css/all.css" />
 </head>
 
-<body style="height: 2000px;">
+<body>
 
 	<div class="languages">
 		<a href="">English</a>
@@ -30,6 +30,7 @@
 			</div>
 		</ul>
 	</nav>
+
 	<div class="slider">
 		<!-- fade css -->
 		<div class="slide-img fade">
@@ -69,10 +70,13 @@
 			دراین مقطع زمانی با سخت کوشی و روی دست گرفتن پلان های منظم توسط ریس این شرکت  انجنیر میراحمد نبی زاده معاون شرکت انجنیر میرویس ساویس و تیم کاری شان توانستند در قسمت ارائه و توسعه انترنت سریع، پرقدرت، ثابت و ارزان در صفحات شمال افغانستان موفق شوند. این شرکت در نخستین سال تاسیسش در کنفرانس ملی سالانه مورخ 2021/12/29  که از طرف شرکت مخابراتی اتصالات افغانستان برگزار گردیده بود، با اخذ تقدیر نامه همچنان توانست جایزه بهترین ارائه کننده انترنت در سال 2021 را نیز در بین شرکت های جدید التاسیس را از آن خود نماید.
 		</p>
 	</div>
+
 	<div class="about-us-bottom">
+
 		<div class="about-us-bottom-image">
 			<img src="assets/images/aboutus.jpg" alt="">
 		</div>
+		
 		<div class="about-us-bottom-content">
 			<div class="about-us-bottom-content-head">
 				<h3>
