--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
 		<i class="fa-light fa-bars fa-2x navOpenBtn "></i>
 		<ul class="nav-items">
 			<div class="nav-links" id="backdrop">
-				<li><a href="#">تماس با ما</a></li>
 				<li><a href="#">نماینده گی ها</a></li>
-				<li><a href="#">پلان ها</a></li>
-				<li><a href="#">خدمات</a></li>
+				<li><a href="#">نظریات</a></li>
+				<li><a href="#">تماس با ما</a></li>
 				<li><a href="#">درباره ما</a></li>
+		
+				<li><a href="#">خدمات</a></li>
 				<li><a href="#">صفحه اصلی</a></li>
 
 			</div>
@@ -59,52 +60,6 @@
 			<span class="dot" onclick="currentSlide(4)"></span>
 		</div>
 		<!-- /onclick js -->
-	</div>
-
-	<div class="about-us-top">
-		<h2>در باره ما</h2>
-		<p>
-			شرکت تکنالوژیکی خدمات انترنیتی یارقین میرزاد یک شرکت خدماتی بوده که درسال 2021  با مجوز رسمی از وزارت تجارت، در راستای خدمات انترنیتی و تجهیزات تکنالوژيکی فعالیت خود را آغاز نمود. این شرکت با بهره گیری از پرسنل با دانش، مجرب و بهترین تجهیزات نرم افزاری و سخت افزاری روز دنیا، همواره در تلاش بوده است خود را با جهت گیری های سریع دنیای فن آوری همسو نموده و خدمات با کیفیت و مورد نیاز برای دوایر دولتی، بانک های خصوصی، موسسات خارجی، شرکت های خصوصی، مارکیت های تجارتی و منازل مسکونی ارائه مینماید. شرکت یارقین میرزاد بر این باور است که استفاده از تکنولوژی روز به تنهایی و بدون اعتلای دانش همکاران داخل شرکت و مشتریان، امکان پذیر نمی باشد ؛ از این رو همکاران شرکت یارقین میرزاد همواره سعی در دستیابی به تازه های این صنعت و انتقال دانش آن به مشتریان خود را دارند. این شرکت از یک سو با گسترش سریع محدوده پوشش دهی خود در 41 نقطه ای  پنج ولایت سمت شمال افغانستان با پشتیبانی 24 ساعته  خدمات انترنتی و استفاده از تجهیزات سخت افزاری باکیفیت، امکان ارائه خدمات ارتباطی مطمئن و مناسبی را برای مشتریان در طول شبانه روز فراهم نموده است.   
-		</p>
-		<p>
-			دراین مقطع زمانی با سخت کوشی و روی دست گرفتن پلان های منظم توسط ریس این شرکت  انجنیر میراحمد نبی زاده معاون شرکت انجنیر میرویس ساویس و تیم کاری شان توانستند در قسمت ارائه و توسعه انترنت سریع، پرقدرت، ثابت و ارزان در صفحات شمال افغانستان موفق شوند. این شرکت در نخستین سال تاسیسش در کنفرانس ملی سالانه مورخ 2021/12/29  که از طرف شرکت مخابراتی اتصالات افغانستان برگزار گردیده بود، با اخذ تقدیر نامه همچنان توانست جایزه بهترین ارائه کننده انترنت در سال 2021 را نیز در بین شرکت های جدید التاسیس را از آن خود نماید.
-		</p>
-	</div>
-
-	<div class="about-us-bottom">
-
-		<div class="about-us-bottom-image">
-			<img src="assets/images/aboutus.jpg" alt="">
-		</div>
-		
-		<div class="about-us-bottom-content">
-			<div class="about-us-bottom-content-head">
-				<h3>
-					خط مشی شرکت:
-				</h3>
-			</div>
-			<div class="about-us-bottom-content-detail">
-				<ul>
-					<li>
-						عرضه پرسرعت ترین و ثابت ترین انترنت
-					</li>
-					<li>
-						بسته های بزرگ انترنتی در بدل نازل ترین قیمت ها
-					</li>
-					<li>
-						کسب رضایتمندی مشتریان با شناسایی انتظارات و برآورده کردن نیازمندی های آنها
-					</li>
-					<li>
-						ارايه خدمات 24 ساعته و بدون وقفه در تمام نقاط تحت پوشش همچنان پاسخگویی و رسیدگی به موقع و منصفانه به شکایات مشتریان
-					</li>
-					<li>
-						ارایه خدمات تخنیکی ، نصب رایگان برای مشتریان ، عرضه با کیفیت ترین کمره های امنیتی، تجهیزات امنیتی، تلفن های سرمیزی و غیره وسایل تکنالوژیکی باقیمت های نازل و خدمات رایگان پس از فروش
-					</li>
-				
-				</ul>
-			</div>
-			</div>
-		</div>
 	</div>
 
 	<div class="service">
@@ -160,6 +115,55 @@
 		</div>
 
 	</div>
+
+
+	<div class="about-us-top">
+		<h2>در باره ما</h2>
+		<p>
+			شرکت تکنالوژیکی خدمات انترنیتی یارقین میرزاد یک شرکت خدماتی بوده که درسال 2021  با مجوز رسمی از وزارت تجارت، در راستای خدمات انترنیتی و تجهیزات تکنالوژيکی فعالیت خود را آغاز نمود. این شرکت با بهره گیری از پرسنل با دانش، مجرب و بهترین تجهیزات نرم افزاری و سخت افزاری روز دنیا، همواره در تلاش بوده است خود را با جهت گیری های سریع دنیای فن آوری همسو نموده و خدمات با کیفیت و مورد نیاز برای دوایر دولتی، بانک های خصوصی، موسسات خارجی، شرکت های خصوصی، مارکیت های تجارتی و منازل مسکونی ارائه مینماید. شرکت یارقین میرزاد بر این باور است که استفاده از تکنولوژی روز به تنهایی و بدون اعتلای دانش همکاران داخل شرکت و مشتریان، امکان پذیر نمی باشد ؛ از این رو همکاران شرکت یارقین میرزاد همواره سعی در دستیابی به تازه های این صنعت و انتقال دانش آن به مشتریان خود را دارند. این شرکت از یک سو با گسترش سریع محدوده پوشش دهی خود در 41 نقطه ای  پنج ولایت سمت شمال افغانستان با پشتیبانی 24 ساعته  خدمات انترنتی و استفاده از تجهیزات سخت افزاری باکیفیت، امکان ارائه خدمات ارتباطی مطمئن و مناسبی را برای مشتریان در طول شبانه روز فراهم نموده است.   
+		</p>
+		<p>
+			دراین مقطع زمانی با سخت کوشی و روی دست گرفتن پلان های منظم توسط ریس این شرکت  انجنیر میراحمد نبی زاده معاون شرکت انجنیر میرویس ساویس و تیم کاری شان توانستند در قسمت ارائه و توسعه انترنت سریع، پرقدرت، ثابت و ارزان در صفحات شمال افغانستان موفق شوند. این شرکت در نخستین سال تاسیسش در کنفرانس ملی سالانه مورخ 2021/12/29  که از طرف شرکت مخابراتی اتصالات افغانستان برگزار گردیده بود، با اخذ تقدیر نامه همچنان توانست جایزه بهترین ارائه کننده انترنت در سال 2021 را نیز در بین شرکت های جدید التاسیس را از آن خود نماید.
+		</p>
+	</div>
+
+	<div class="about-us-bottom">
+
+		<div class="about-us-bottom-image">
+			<img src="assets/images/aboutus.jpg" alt="">
+		</div>
+		
+		<div class="about-us-bottom-content">
+			<div class="about-us-bottom-content-head">
+				<h3>
+					خط مشی شرکت:
+				</h3>
+			</div>
+			<div class="about-us-bottom-content-detail">
+				<ul>
+					<li>
+						عرضه پرسرعت ترین و ثابت ترین انترنت
+					</li>
+					<li>
+						بسته های بزرگ انترنتی در بدل نازل ترین قیمت ها
+					</li>
+					<li>
+						کسب رضایتمندی مشتریان با شناسایی انتظارات و برآورده کردن نیازمندی های آنها
+					</li>
+					<li>
+						ارايه خدمات 24 ساعته و بدون وقفه در تمام نقاط تحت پوشش همچنان پاسخگویی و رسیدگی به موقع و منصفانه به شکایات مشتریان
+					</li>
+					<li>
+						ارایه خدمات تخنیکی ، نصب رایگان برای مشتریان ، عرضه با کیفیت ترین کمره های امنیتی، تجهیزات امنیتی، تلفن های سرمیزی و غیره وسایل تکنالوژیکی باقیمت های نازل و خدمات رایگان پس از فروش
+					</li>
+				
+				</ul>
+			</div>
+			</div>
+		</div>
+	</div>
+
+
 
 
 
