new style applied

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 				<li><a href="#">نظریات</a></li>
 				<li><a href="#">تماس با ما</a></li>
 				<li><a href="#">درباره ما</a></li>
-		
 				<li><a href="#">خدمات</a></li>
 				<li><a href="#">صفحه اصلی</a></li>
 
@@ -64,58 +63,133 @@
 
 	<div class="service">
 		<div class="service-title">
-			<h1>خدمات</h1>
+			<h1>خدمات انترنیت</h1>
 		</div>
-		<div class="service-card">
+		<div class="service-cards">
 			<div class="service-item">
+				<div class="service-item-title">
+					<h3>شبکه سازی</h3>
+				</div>
 				<div class="service-icon">
 					<i class="fa-solid fa-router"></i>
 				</div>
-				<div class="service-title">
-					<h4>خدمات</h4>
-				</div>
 				<div class="service-description">
 					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
 				</div>
-			</div>
-			<div class="service-item">
-				<div class="service-icon">
-					<i class="fa-solid fa-house-signal"></i>
-				</div>
-				<div class="service-title">
-					<h4>خدمات</h4>
-				</div>
-				<div class="service-description">
-					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
-				</div>
-			</div>
-			<div class="service-item">
-				<div class="service-icon">
-					<i class="fa-solid fa-camera-cctv"></i>
-				</div>
-				<div class="service-title">
-					<h4>خدمات</h4>
-				</div>
-				<div class="service-description">
-					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
-				</div>
+				<div class="service-item-footer"></div>
 			</div>
 
 			<div class="service-item">
-				<div class="service-icon">
-					<i class="fa-duotone fa-wifi"></i>
+				<div class="service-item-title">
+					<h3>مایکروویر</h3>
 				</div>
-				<div class="service-title">
-					<h4>خدمات</h4>
+				<div class="service-icon">
+					<i class="fa-solid fa-house-signal"></i>
 				</div>
 				<div class="service-description">
 					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
 				</div>
+				<div class="service-item-footer"></div>
+			</div>
+			<div class="service-item">
+				<div class="service-item-title">
+					<h3>ویست</h3>
+				</div>
+				<div class="service-icon">
+					<i class="fa-solid fa-camera-cctv"></i>
+				</div>
+				<div class="service-description">
+					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
+				</div>
+				<div class="service-item-footer"></div>
+			</div>
+
+			<div class="service-item">
+				<div class="service-item-title">
+					<h3>وایرلس</h3>
+				</div>
+				<div class="service-icon">
+					<i class="fa-duotone fa-wifi"></i>
+				</div>
+				<div class="service-description">
+					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
+				</div>
+				<div class="service-item-footer"></div>
 			</div>
 		</div>
 
 	</div>
 
+	<div class="service">
+		<div class="service-title">
+			<h1>خدمات الکترونیکی</h1>
+		</div>
+		<div class="service-cards">
+			<div class="service-item">
+				<div class="service-item-title">
+					<h3>تجهیزات
+						<br>
+						<span>امنیتی</span>
+					</h3>
+				</div>
+				<div class="service-icon">
+					<i class="fa-solid fa-router"></i>
+				</div>
+				<div class="service-description">
+					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
+				</div>
+				<div class="service-item-footer"></div>
+			</div>
+
+			<div class="service-item">
+				<div class="service-item-title">
+					<h3>حاضری های 
+						<br>
+						<span>الکترونیکی</span>
+					</h3>
+				</div>
+				<div class="service-icon">
+					<i class="fa-solid fa-house-signal"></i>
+				</div>
+				<div class="service-description">
+					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
+				</div>
+				<div class="service-item-footer"></div>
+			</div>
+			<div class="service-item">
+				<div class="service-item-title">
+					<h3>تلفن های 
+						<br>
+						<span>سرمیزی</span>
+					</h3>
+				</div>
+				<div class="service-icon">
+					<i class="fa-solid fa-camera-cctv"></i>
+				</div>
+				<div class="service-description">
+					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
+				</div>
+				<div class="service-item-footer"></div>
+			</div>
+
+			<div class="service-item">
+				<div class="service-item-title">
+					<h3>کمره های 
+						<br>
+						<span>امنیتی</span>
+					</h3>
+				</div>
+				<div class="service-icon">
+					<i class="fa-duotone fa-wifi"></i>
+				</div>
+				<div class="service-description">
+					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
+				</div>
+				<div class="service-item-footer"></div>
+			</div>
+		</div>
+
+	</div>
 
 	<div class="about-us-top">
 		<h2>در باره ما</h2>
