--- a/index.html
+++ b/index.html
@@ -63,28 +63,17 @@
 
 	<div class="service">
 		<div class="service-title">
-			<h1>خدمات انترنیت</h1>
+			<h1>خدمات ما</h1>
 		</div>
 		<div class="service-cards">
-			<div class="service-item">
-				<div class="service-item-title">
-					<h3>شبکه سازی</h3>
-				</div>
-				<div class="service-icon">
-					<i class="fa-solid fa-router"></i>
-				</div>
-				<div class="service-description">
-					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
-				</div>
-				<div class="service-item-footer"></div>
-			</div>
+			
 
 			<div class="service-item">
 				<div class="service-item-title">
-					<h3>مایکروویر</h3>
+					<h3>مایکروویو</h3>
 				</div>
 				<div class="service-icon">
-					<i class="fa-solid fa-house-signal"></i>
+					<i class="fa-solid fa-tower-broadcast"></i>
 				</div>
 				<div class="service-description">
 					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
@@ -96,7 +85,7 @@
 					<h3>ویست</h3>
 				</div>
 				<div class="service-icon">
-					<i class="fa-solid fa-camera-cctv"></i>
+					<i class="fa-solid fa-satellite-dish"></i>
 				</div>
 				<div class="service-description">
 					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
@@ -116,15 +105,7 @@
 				</div>
 				<div class="service-item-footer"></div>
 			</div>
-		</div>
 
-	</div>
-
-	<div class="service">
-		<div class="service-title">
-			<h1>خدمات الکترونیکی</h1>
-		</div>
-		<div class="service-cards">
 			<div class="service-item">
 				<div class="service-item-title">
 					<h3>تجهیزات
@@ -133,38 +114,7 @@
 					</h3>
 				</div>
 				<div class="service-icon">
-					<i class="fa-solid fa-router"></i>
-				</div>
-				<div class="service-description">
-					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
-				</div>
-				<div class="service-item-footer"></div>
-			</div>
-
-			<div class="service-item">
-				<div class="service-item-title">
-					<h3>حاضری های 
-						<br>
-						<span>الکترونیکی</span>
-					</h3>
-				</div>
-				<div class="service-icon">
-					<i class="fa-solid fa-house-signal"></i>
-				</div>
-				<div class="service-description">
-					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
-				</div>
-				<div class="service-item-footer"></div>
-			</div>
-			<div class="service-item">
-				<div class="service-item-title">
-					<h3>تلفن های 
-						<br>
-						<span>سرمیزی</span>
-					</h3>
-				</div>
-				<div class="service-icon">
-					<i class="fa-solid fa-camera-cctv"></i>
+					<i class="fa-solid fa-tty"></i>
 				</div>
 				<div class="service-description">
 					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
@@ -180,13 +130,27 @@
 					</h3>
 				</div>
 				<div class="service-icon">
-					<i class="fa-duotone fa-wifi"></i>
+					<i class="fa-solid fa-camera-cctv"></i>
 				</div>
 				<div class="service-description">
 					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
 				</div>
 				<div class="service-item-footer"></div>
 			</div>
+
+			<div class="service-item">
+				<div class="service-item-title">
+					<h3>شبکه سازی</h3>
+				</div>
+				<div class="service-icon">
+					<i class="fa-solid fa-network-wired"></i>
+				</div>
+				<div class="service-description">
+					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
+				</div>
+				<div class="service-item-footer"></div>
+			</div>
+
 		</div>
 
 	</div>
