--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					<h3>مایکروویو</h3>
 				</div>
 				<div class="service-icon">
-					<i class="fa-solid fa-tower-broadcast"></i>
+					<i class="fa-solid fa-tower-cell"></i>
 				</div>
 				<div class="service-description">
 					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
@@ -114,7 +114,7 @@
 					</h3>
 				</div>
 				<div class="service-icon">
-					<i class="fa-solid fa-tty"></i>
+					<i class="fa-solid fa-phone-office"></i>
 				</div>
 				<div class="service-description">
 					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
