--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					<h3>وایرلس</h3>
 				</div>
 				<div class="service-icon">
-					<i class="fa-duotone fa-wifi"></i>
+					<i class="fa-solid fa-signal-stream"></i>
 				</div>
 				<div class="service-description">
 					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
