--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 	<link rel="stylesheet" href="style/style.css">
 	<link rel="stylesheet" href="assets/FontAwesome.Pro.6.4.2/css/all.css" />
+	<script>
+		window.onload = function() {
+		  document.body.style.visibility = "visible";
+		};
+	  </script>
 </head>
 
 <body>
@@ -205,8 +210,12 @@
 
 
 
+	
+
 	<script src="script/jsfile.js"></script>
 	<script src="./script/script.js" defer></script>
+
+	</script>
 </body>
 
 </html>
