--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 		<i class="fa-light fa-bars fa-2x navOpenBtn "></i>
 		<ul class="nav-items">
 			<div class="nav-links" id="backdrop">
-				<li><a href="#">نماینده گی ها</a></li>
 				<li><a href="#">نظریات</a></li>
 				<li><a href="#">تماس با ما</a></li>
 				<li><a href="#">درباره ما</a></li>
-				<li><a href="#">خدمات</a></li>
+				<li><a href="#">نمایندگی ها</a></li>
+				<li><a href="#">خدمات ما</a></li>
 				<li><a href="#">صفحه اصلی</a></li>
 
 			</div>
@@ -205,6 +205,9 @@
 			</div>
 		</div>
 	</div>
+
+
+
 
 
 
