new style applied

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<a href="">English</a>
 		<a href="">دری</a>
 	</div>
+
 	<nav class="nav">
 		<img src="assets/images/logo.png" alt="" class="logo">
 		<i class="fa-light fa-bars fa-2x navOpenBtn "></i>
@@ -119,7 +120,7 @@
 					</h3>
 				</div>
 				<div class="service-icon">
-					<i class="fa-solid fa-phone-office"></i>
+					<i class="fa-solid fa-fingerprint"></i>
 				</div>
 				<div class="service-description">
 					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
