new style applied

--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Yarqin Mirzad</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
+	<title>Yarqin Mirzad</title>
+	<meta name='viewport' content='width=device-width, initial-scale=1'>
 	<link rel="stylesheet" href="style/style.css">
 	<link rel="stylesheet" href="assets/FontAwesome.Pro.6.4.2/css/all.css" />
 	<script>
-		window.onload = function() {
-		  document.body.style.visibility = "visible";
+		window.onload = function () {
+			document.body.style.visibility = "visible";
 		};
-	  </script>
+	</script>
 </head>
 
 <body>
@@ -72,7 +73,7 @@
 			<h1>خدمات ما</h1>
 		</div>
 		<div class="service-cards">
-			
+
 
 			<div class="service-item">
 				<div class="service-item-title">
@@ -130,7 +131,7 @@
 
 			<div class="service-item">
 				<div class="service-item-title">
-					<h3>کمره های 
+					<h3>کمره های
 						<br>
 						<span>امنیتی</span>
 					</h3>
@@ -161,65 +162,138 @@
 
 	</div>
 
-	<div class="about-us-top">
-		<h2>در باره ما</h2>
-		<p>
-			شرکت تکنالوژیکی خدمات انترنیتی یارقین میرزاد یک شرکت خدماتی بوده که درسال 2021  با مجوز رسمی از وزارت تجارت، در راستای خدمات انترنیتی و تجهیزات تکنالوژيکی فعالیت خود را آغاز نمود. این شرکت با بهره گیری از پرسنل با دانش، مجرب و بهترین تجهیزات نرم افزاری و سخت افزاری روز دنیا، همواره در تلاش بوده است خود را با جهت گیری های سریع دنیای فن آوری همسو نموده و خدمات با کیفیت و مورد نیاز برای دوایر دولتی، بانک های خصوصی، موسسات خارجی، شرکت های خصوصی، مارکیت های تجارتی و منازل مسکونی ارائه مینماید. شرکت یارقین میرزاد بر این باور است که استفاده از تکنولوژی روز به تنهایی و بدون اعتلای دانش همکاران داخل شرکت و مشتریان، امکان پذیر نمی باشد ؛ از این رو همکاران شرکت یارقین میرزاد همواره سعی در دستیابی به تازه های این صنعت و انتقال دانش آن به مشتریان خود را دارند. این شرکت از یک سو با گسترش سریع محدوده پوشش دهی خود در 41 نقطه ای  پنج ولایت سمت شمال افغانستان با پشتیبانی 24 ساعته  خدمات انترنتی و استفاده از تجهیزات سخت افزاری باکیفیت، امکان ارائه خدمات ارتباطی مطمئن و مناسبی را برای مشتریان در طول شبانه روز فراهم نموده است.   
-		</p>
-		<p>
-			دراین مقطع زمانی با سخت کوشی و روی دست گرفتن پلان های منظم توسط ریس این شرکت  انجنیر میراحمد نبی زاده معاون شرکت انجنیر میرویس ساویس و تیم کاری شان توانستند در قسمت ارائه و توسعه انترنت سریع، پرقدرت، ثابت و ارزان در صفحات شمال افغانستان موفق شوند. این شرکت در نخستین سال تاسیسش در کنفرانس ملی سالانه مورخ 2021/12/29  که از طرف شرکت مخابراتی اتصالات افغانستان برگزار گردیده بود، با اخذ تقدیر نامه همچنان توانست جایزه بهترین ارائه کننده انترنت در سال 2021 را نیز در بین شرکت های جدید التاسیس را از آن خود نماید.
-		</p>
-	</div>
 
-	<div class="about-us-bottom">
 
-		<div class="about-us-bottom-image">
-			<img src="assets/images/aboutus.jpg" alt="">
+
+
+	<div class="about_us">
+
+		<h1>در باره ما</h1>
+		<div class="tab_box">
+			<button class="tab_btn active">تاریخچه</button>
+			<button class="tab_btn">دستاوردها</button>
+			<button class="tab_btn">مجوز ها</button>
 		</div>
-		
-		<div class="about-us-bottom-content">
-			<div class="about-us-bottom-content-head">
-				<h3>
-					خط مشی شرکت:
-				</h3>
+
+		<div class="content_box">
+			<div class="content active">
+				<div class="about-us-top">
+					<p>
+						شرکت تکنالوژیکی خدمات انترنیتی یارقین میرزاد یک شرکت خدماتی بوده که درسال 2021 با مجوز رسمی از
+						وزارت تجارت، در راستای خدمات انترنیتی و تجهیزات تکنالوژيکی فعالیت خود را آغاز نمود. این شرکت با
+						بهره گیری از پرسنل با دانش، مجرب و بهترین تجهیزات نرم افزاری و سخت افزاری روز دنیا، همواره در
+						تلاش بوده است خود را با جهت گیری های سریع دنیای فن آوری همسو نموده و خدمات با کیفیت و مورد نیاز
+						برای دوایر دولتی، بانک های خصوصی، موسسات خارجی، شرکت های خصوصی، مارکیت های تجارتی و منازل مسکونی
+						ارائه مینماید. شرکت یارقین میرزاد بر این باور است که استفاده از تکنولوژی روز به تنهایی و بدون
+						اعتلای دانش همکاران داخل شرکت و مشتریان، امکان پذیر نمی باشد ؛ از این رو همکاران شرکت یارقین
+						میرزاد همواره سعی در دستیابی به تازه های این صنعت و انتقال دانش آن به مشتریان خود را دارند. این
+						شرکت از یک سو با گسترش سریع محدوده پوشش دهی خود در 41 نقطه ای پنج ولایت سمت شمال افغانستان با
+						پشتیبانی 24 ساعته خدمات انترنتی و استفاده از تجهیزات سخت افزاری باکیفیت، امکان ارائه خدمات
+						ارتباطی مطمئن و مناسبی را برای مشتریان در طول شبانه روز فراهم نموده است.
+					</p>
+					<p>
+						دراین مقطع زمانی با سخت کوشی و روی دست گرفتن پلان های منظم توسط ریس این شرکت انجنیر میراحمد نبی
+						زاده معاون شرکت انجنیر میرویس ساویس و تیم کاری شان توانستند در قسمت ارائه و توسعه انترنت سریع،
+						پرقدرت، ثابت و ارزان در صفحات شمال افغانستان موفق شوند. این شرکت در نخستین سال تاسیسش در کنفرانس
+						ملی سالانه مورخ 2021/12/29 که از طرف شرکت مخابراتی اتصالات افغانستان برگزار گردیده بود، با اخذ
+						تقدیر نامه همچنان توانست جایزه بهترین ارائه کننده انترنت در سال 2021 را نیز در بین شرکت های جدید
+						التاسیس را از آن خود نماید.
+					</p>
+				</div>
+
+				<div class="about-us-bottom">
+
+					<div class="about-us-bottom-image">
+						<img src="assets/images/aboutus.jpg" alt="">
+					</div>
+
+					<div class="about-us-bottom-content">
+						<div class="about-us-bottom-content-head">
+							<h3>
+								خط مشی شرکت:
+							</h3>
+						</div>
+						<div class="about-us-bottom-content-detail">
+							<ul>
+								<li>
+									عرضه پرسرعت ترین و ثابت ترین انترنت
+								</li>
+								<li>
+									بسته های بزرگ انترنتی در بدل نازل ترین قیمت ها
+								</li>
+								<li>
+									کسب رضایتمندی مشتریان با شناسایی انتظارات و برآورده کردن نیازمندی های آنها
+								</li>
+								<li>
+									ارايه خدمات 24 ساعته و بدون وقفه در تمام نقاط تحت پوشش همچنان پاسخگویی و رسیدگی به
+									موقع و منصفانه به شکایات مشتریان
+								</li>
+								<li>
+									ارایه خدمات تخنیکی ، نصب رایگان برای مشتریان ، عرضه با کیفیت ترین کمره های امنیتی،
+									تجهیزات امنیتی، تلفن های سرمیزی و غیره وسایل تکنالوژیکی باقیمت های نازل و خدمات
+									رایگان پس از فروش
+								</li>
+
+							</ul>
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="about-us-bottom-content-detail">
-				<ul>
-					<li>
-						عرضه پرسرعت ترین و ثابت ترین انترنت
-					</li>
-					<li>
-						بسته های بزرگ انترنتی در بدل نازل ترین قیمت ها
-					</li>
-					<li>
-						کسب رضایتمندی مشتریان با شناسایی انتظارات و برآورده کردن نیازمندی های آنها
-					</li>
-					<li>
-						ارايه خدمات 24 ساعته و بدون وقفه در تمام نقاط تحت پوشش همچنان پاسخگویی و رسیدگی به موقع و منصفانه به شکایات مشتریان
-					</li>
-					<li>
-						ارایه خدمات تخنیکی ، نصب رایگان برای مشتریان ، عرضه با کیفیت ترین کمره های امنیتی، تجهیزات امنیتی، تلفن های سرمیزی و غیره وسایل تکنالوژیکی باقیمت های نازل و خدمات رایگان پس از فروش
-					</li>
-				
-				</ul>
+
+
+			<div class="content">
+				<p>
+					لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+
+				</p>
+				<br>
+				<p>
+					لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+
+				</p>
 			</div>
+
+			<div class="content">
+				<p>
+					لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+				</p>
+				<br>
+				<br>
+				<p>
+					لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+
+				</p>
 			</div>
 		</div>
-	</div>
 
 
 
 
 
+		<script src="script/jsfile.js"></script>
+		<script src="./script/script.js" defer></script>
+
+		<script>
+
+			const tabs = document.querySelectorAll('.tab_btn');
+
+			const all_content = document.querySelectorAll('.content');
+
+			tabs.forEach((tab, index) => {
+				tab.addEventListener('click', (e) => {
+					tabs.forEach(tab => { tab.classList.remove('active') });
+					tab.classList.add('active');
+
+					var line = document.querySelector(".line");
+					all_content.forEach(content => { content.classList.remove('active') });
+					all_content[index].classList.add("active");
+				});
+			})
 
 
+		</script>
 
-	
-
-	<script src="script/jsfile.js"></script>
-	<script src="./script/script.js" defer></script>
-
-	</script>
+		</script>
 </body>
 
 </html>
