New Style applied

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 		<i class="fa-light fa-bars fa-2x navOpenBtn "></i>
 		<ul class="nav-items">
 			<div class="nav-links" id="backdrop">
-				<li><a href="#">نظریات</a></li>
-				<li><a href="#">تماس با ما</a></li>
+				<li><a href="#">پیشنهاد</a></li>
 				<li><a href="#">درباره ما</a></li>
 				<li><a href="#">نمایندگی ها</a></li>
 				<li><a href="#">خدمات ما</a></li>
@@ -266,8 +265,30 @@
 			</div>
 		</div>
 
+	</div>
 
+		<div class="proposal">
+			<div class="proposal-title">
+				<h1>پیشنهاد</h1>
+			</div>
+			<div class="proposal-detail">
+				<form>
+					<div>
+						<label for="pname">نام</label>
+						<input type="text" id="pname">
+					</div>
+					<div>
+						<label for="ptext">پیام</label>
+						<textarea id="ptext"></textarea>
+					</div>
+					<div>
+						<button>ارسال</button>
+					</div>
+				</form>
+			</div>
+		</div>
 
+		<div class="footer"></div>
 
 
 		<script src="script/jsfile.js"></script>
@@ -293,7 +314,6 @@
 
 		</script>
 
-		</script>
 </body>
 
 </html>
